# sparql-template-lib

./: README.md  pyproject.toml
app/: api.py
pyodide_app/: examples.json  index.html  script.js  styles.css
server/: api.py  dependencies.py  models.py  services.py
src/query_rewrite/: __init__.py  extractors.py  util.py
src/query_rewrite/transformers/: __init__.py  dataset_clause.py
stl/: __init__.py
stl/transformers/: __init__.py  dataset_clause.py
tests/: test.py
tests/template_args/: construct_multiple.saj  construct_single.saj
tests/template_queries/: construct_multiple.rq  construct_single.rq  select_multiple.rq  select_single.rq
