[tool.poetry]
name = "stl"
version = "0.1.0"
description = ""
authors = ["david <dcchabgood@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
#sparql = { path = "./dist/sparql-0.1.4-py3-none-any.whl" }
#fastapi = "^0.112.0"
#uvicorn = "^0.30.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "stl" }
]

# Include necessary files in the distribution
include = [
    { path = "README.md", format = "sdist" },
    { path = "LICENSE", format = "sdist" },
    { path = "pyproject.toml", format = "sdist" }
]
